tests/e2e/try_nested_throw_error.story
try
	x=0
catch as error
	if TRUE
		throw error
